...
        startButtonContainerView = UIView()
        startButtonContainerView.translatesAutoresizingMaskIntoConstraints = false
        contentView.addSubview(startButtonContainerView)
        btnStart = UIButton(type:.system)
        btnStart.translatesAutoresizingMaskIntoConstraints = false
        startButtonContainerView.addSubview(btnStart)
        //btnStart.setTitle("Start", for: .normal)
        btnStart.layer.borderWidth = 1.0
        btnStart.layer.cornerRadius = 15
        //btnStart.layer.borderColor = primaryColor.cgColor
        //        btnStart.backgroundColor = primaryColor
        btnStart.setTitleColor(UIColor.white, for: .normal)
        initWelcomeView()
...
            case 1: 
                campaignButtonDelegate.prevButtonPressed(iterator: followUpIterator)
                followUpIterator -= 1
                break
            case 2: campaignButtonDelegate.prevButtonPressed(iterator: followUpIterator)
            followUpIterator -= 1
            btnNext.setTitle(staticTexts.translation["CAMPAIGN_MODE_NEXT_BUTTON_TEXT"] ?? "Next", for: .normal)
                break
            default:
                break
            }
            return
        } else {
...
