...
    @objc func previewButtonAction(sender:UIButton!) {
    }
    
    @objc func initButtonView() {
        let btnVC = UIButton(type: .system)
        let color: UIColor = UIColor(red: 26.0/255.0, green: 188.0/255.0, blue: 156.0/255.0, alpha: 1.0)
        btnVC.setTitle("SHOW IN VIEW CONTROLLER", for: .normal)
        btnVC.layer.cornerRadius = 5
        btnVC.layer.borderWidth = 2
        btnVC.layer.borderColor = color.cgColor
        btnVC.setTitleColor(color, for: .normal)
        
        btnVC.addTarget(self, action: #selector(controllerButtonAction(sender:)), for: .touchUpInside)
...
